[tool.poetry]
name = "cords-semantics"
version = "0.2.3"
description = ""
authors = ["Tharindu Ranathunga <tharindu.ranathunga@mtu.ie>"]
readme = "README.md"
include = ["cords_semantics/data/*.rdf"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.0.0"
mlflow = "^2.12.1"
numpy = ">=1.21"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

