[tool.poetry]
name = "cords-semantics"
version = "0.2.3"
description = ""
authors = ["Tharindu Ranathunga <tharindu.ranathunga@mtu.ie>"]
readme = "README.md"
include = ["cords_semantics/data/*.rdf"]

[tool.poetry.dependencies]
python = "^3.6"
rdflib = "==5.0.0"
mlflow = "^1.23.1"
numpy = ">=1.19.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

